add department module
