# docs/swagger.yaml
@@ -168,6 +168,26 @@ paths:
           schema:
             type: string
       summary: 更新用户密码
+  /v1/depts:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"id":1}}'
+          schema:
+            type: string
+      summary: 新增应用
+  /v1/depts/:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"id":1,"name":"test"}}'
+          schema:
+            type: string
+      summary: 部门信息
   /v1/domains:
     get:
       produces:
